force-app/src/objects/ff_frb__Financial_Report__c.object
<CustomObject>
    <description>Stores customized reports created using Financial Report Builder.</description>
    <fields>
        <fullName>ff_frb__Description__c</fullName>
        <description>The description of the report.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ff_frb__FilterConfiguration1__c</fullName>
        <description>First of the five configurations available for query filters.</description>
        <label>Filter Configuration 1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ff_frb__FilterConfiguration2__c</fullName>
        <description>Second of the five configurations available for query filters.</description>
        <label>Filter Configuration 2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ff_frb__FilterConfiguration3__c</fullName>
        <description>Third of the five configurations available for query filters.</description>
        <label>Filter Configuration 3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ff_frb__Report_Type__c</fullName>
        <description>Report type</description>
        <label>Report Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ff_frb__FinancialReportType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ff_frb__Show_Soft_Date_Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Soft Date Filter Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ff_frb__Soft_Date_Filter_Configuration__c</fullName>
        <label>Soft Date Filter Configuration</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ff_frb__TableConfiguration1__c</fullName>
        <description>First of the three configurations available for multi lens table.</description>
        <label>Table Configuration 1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ff_frb__TableConfiguration2__c</fullName>
        <description>Second of the three configurations available for multi lens table.</description>
        <label>Table Configuration 2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ff_frb__TableConfiguration3__c</fullName>
        <description>Second of the three configurations available for multi lens table.</description>
        <label>Table Configuration 3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ff_frb__Use_Current_Period_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Current Period Date Override</label>
        <type>Checkbox</type>
    </fields>
    <label>Financial Report</label>
    <listViews>
        <fullName>ff_frb__All</fullName>
        <columns>NAME</columns>
        <columns>ff_frb__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Reports</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>